[gd_scene load_steps=3 format=3 uid="uid://bhwcwatnlhhsg"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_7hrk6"]
[ext_resource type="Texture2D" uid="uid://b7gw7j2xwpoak" path="res://Sprinkle.svg" id="2_sk82a"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7hrk6")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -181.0
offset_top = 78.0
offset_right = 182.0
offset_bottom = 166.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Aim Trainer"
horizontal_alignment = 1

[node name="High Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -181.0
offset_top = 156.0
offset_right = 182.0
offset_bottom = 244.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "High Score: 0"
horizontal_alignment = 1

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -20.0
offset_right = 90.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Game"

[node name="Play2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 46.0
offset_right = 90.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
text = "Manual"

[node name="Play3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 177.0
offset_right = 90.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
text = "Source Code"

[node name="Play4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 112.0
offset_right = 90.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
text = "Reset High Score"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -53.0
offset_right = 72.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Made by grqphical"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("2_sk82a")
region_rect = Rect2(0, 0, 1280, 720)

[connection signal="pressed" from="Play" to="." method="change_scene"]
[connection signal="pressed" from="Play2" to="." method="view_manual"]
[connection signal="pressed" from="Play3" to="." method="view_source_code"]
[connection signal="pressed" from="Play4" to="." method="reset_high_score"]
